fix: whitespaces are removed when serializing textNode

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,3 +1,4 @@
 .t-input {
     background: white;
+    text-align: left;
 }
